test-data/src/main/java/ma/markware/charybdis/test/entities/invalid/DuplicateKeyspaceDefinition.java
package ma.markware.charybdis.test.entities.invalid;

import ma.markware.charybdis.model.annotation.Keyspace;

@Keyspace(name = "test_keyspace")
public class DuplicateKeyspaceDefinition {

}
